--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
     "echarts": "^5.0.0",
     "element-ui": "^2.15.0",
     "ezuikit-js": "^0.2.3",
+    "lib-flexible": "^0.3.2",
+    "moment": "^2.29.1",
+    "postcss-px2rem": "^0.3.0",
+    "style-vw-loader": "^1.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
@@ -22,6 +26,7 @@
     "@vue/cli-service": "~4.5.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "px2rem-loader": "^0.1.9",
     "vue-template-compiler": "^2.6.11"
   }
 }
