--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
     "echarts": "^5.0.0",
     "element-ui": "^2.15.0",
     "ezuikit-js": "^0.2.3",
+    "js-md5": "^0.7.3",
     "lib-flexible": "^0.3.2",
     "moment": "^2.29.1",
     "postcss-px2rem": "^0.3.0",
     "style-vw-loader": "^1.0.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
+    "vue-seamless-scroll": "^1.1.23",
     "vuex": "^3.4.0"
   },
   "devDependencies": {
