--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vue-seamless-scroll": "^1.1.23",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.16.9"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
